update: index.html, styles.css, script.js, print.css, 404.html, 500.html, impressum.html, manifest.webmanifest, sw.js, robots.txt

--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="robots" content="noindex,nofollow" />
-  <title>Vitalijs Ivanovs · Praktikum 2026</title>
-  <meta name="description" content="Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung (IHK) ab April 2026. Lebenslauf, Anschreiben, Projekte, Zertifikate." />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Vitalijs Ivanovs · Praktikum 2026" />
-  <meta property="og:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate." />
-  <meta property="og:image" content="assets/og.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Vitalijs Ivanovs · Praktikum 2026" />
-  <meta name="twitter:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate." />
-  <meta name="theme-color" content="#0b0d12" />
-  <link rel="icon" href="favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="manifest" href="manifest.webmanifest">
+  <title>Vitalijs Ivanovs Praktikum</title>
+  <meta name="description" content="Bewerbung, Lebenslauf, Projekte, Zeugnisse." />
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Vitalijs Ivanovs Praktikum">
+  <meta property="og:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate. Praktikum 2026.">
+  <meta property="og:image" content="assets/og.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Vitalijs Ivanovs Praktikum">
+  <meta name="twitter:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate. Praktikum 2026.">
+  <meta name="twitter:image" content="assets/og.jpg">
+  <meta name="theme-color" content="#0b0d12">
+  <link rel="icon" href="favicon.ico?v=3">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=3">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=3">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=3">
+  <link rel="manifest" href="manifest.json">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body data-lang="de">
@@ -30,6 +30,7 @@
     <span class="bar bar-mid"></span>
     <span class="bar bar-bot"></span>
   </button>
+
   <nav class="nav" role="navigation">
     <a href="#about">Über mich</a>
     <a href="#cv">Lebenslauf</a>
@@ -37,10 +38,13 @@
     <a href="#projects">Projekte</a>
     <a href="#contact">Kontakt</a>
   </nav>
+
+  <a class="linkedin-btn" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener" aria-label="LinkedIn">
+    <svg aria-hidden="true" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8.5h4V23h-4V8.5zm7 0h3.83v1.98h.05c.53-1 1.83-2.06 3.77-2.06 4.03 0 4.77 2.65 4.77 6.1V23h-4v-6.46c0-1.54-.03-3.52-2.15-3.52-2.15 0-2.48 1.68-2.48 3.41V23h-4V8.5z"/></svg>
+    <span class="label">LinkedIn</span>
+  </a>
+
   <div class="header-controls">
-    <a class="linkedin" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">
-      <span class="linkedin-icon">in</span><span class="linkedin-text">LinkedIn</span>
-    </a>
     <div class="lang-switch" aria-label="Language">
       <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">🇩🇪</button>
       <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">🇬🇧</button>
@@ -55,16 +59,30 @@
 </header>
 
 <section class="hero" aria-label="Hero">
+  <div class="hero-media" aria-hidden="true">
+    <div class="grid">
+      <img src="assets/1.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/2.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/3.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/4.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/5.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/6.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/7.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/8.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/9.jpg" alt="" loading="lazy" width="1600" height="900">
+    </div>
+  </div>
   <h1 class="brand" tabindex="0">BEWERBUNG</h1>
-  <p class="subtitle">Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung (IHK)</p>
+  <p class="subtitle">Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung</p>
+  <a href="#docs" class="cta btn">Unterlagen ansehen</a>
 </section>
 
 <main>
   <section id="about" class="section" role="region" aria-labelledby="about-heading">
     <h2 id="about-heading" class="de-only">Über mich</h2>
     <h2 class="en-only">About me</h2>
-    <p class="de-only">Ich absolviere aktuell eine Umschulung zum Fachinformatiker für Anwendungsentwicklung und suche ab April 2026 ein Pflichtpraktikum. Kenntnisse: Java, Python, HTML, CSS, JavaScript und Datenbanken.</p>
-    <p class="en-only">I am retraining as an IT specialist in application development and I am looking for a mandatory internship starting April 2026. Skills: Java, Python, HTML, CSS, JavaScript and databases.</p>
+    <p class="de-only">Ich absolviere aktuell eine Umschulung zum Fachinformatiker für Anwendungsentwicklung und suche ab April 2026 ein Pflichtpraktikum. Während meiner Ausbildung habe ich Kenntnisse in Java, Python, Webentwicklung (HTML, CSS, JavaScript) und Datenbanken erworben. Mein Ziel ist es, praktische Erfahrung in einem professionellen Umfeld zu sammeln und meine Fähigkeiten weiterzuentwickeln.</p>
+    <p class="en-only">I am currently retraining as an IT specialist in application development and I am looking for a mandatory internship starting April 2026. I gained skills in Java, Python, web (HTML, CSS, JavaScript) and databases. I want hands-on experience in a professional environment.</p>
   </section>
 
   <section id="cv" class="section" role="region" aria-labelledby="cv-heading">
@@ -84,11 +102,14 @@
         <p class="en-only">Personal projects in web development, API design, automation and UIs.</p>
       </article>
     </div>
+    <a class="btn ghost de-only" href="#docs">Kompletter Lebenslauf unten</a>
+    <a class="btn ghost en-only" href="#docs">Full résumé below</a>
   </section>
 
   <section id="docs" class="section" role="region" aria-labelledby="docs-heading">
     <h2 id="docs-heading" class="de-only">Unterlagen</h2>
     <h2 class="en-only">Documents</h2>
+
     <div class="cards">
       <article class="card de-only">
         <h3>Anschreiben (DE)</h3>
@@ -200,54 +221,60 @@
   <h2 id="contact-heading" class="de-only">Kontakt</h2>
   <h2 class="en-only">Contact</h2>
 
-  <form action="https://formspree.io/f/mandzzal" method="POST" class="contact-form" id="contactForm" novalidate>
-    <div class="field">
-      <label for="cf-name" class="de-only">Name</label>
-      <label for="cf-name" class="en-only">Name</label>
-      <input id="cf-name" name="name" type="text" inputmode="text" autocomplete="name" required>
+  <form id="contact-form" class="contact-form" action="https://formspree.io/f/mandzzal" method="POST">
+    <div class="form-grid">
+      <div class="field">
+        <label for="cf-name" class="de-only">Name</label>
+        <label for="cf-name" class="en-only">Name</label>
+        <input id="cf-name" name="name" type="text" inputmode="text" autocomplete="name" placeholder="Vor- und Nachname" required>
+        <small class="muted de-only">Vor- und Nachname.</small>
+        <small class="muted en-only">First and last name.</small>
+      </div>
+      <div class="field">
+        <label for="cf-email">E-Mail</label>
+        <input id="cf-email" name="_replyto" type="email" inputmode="email" autocomplete="email" placeholder="name@firma.de" required>
+        <small class="muted de-only">Beispiel: name@firma.de</small>
+        <small class="muted en-only">Example: name@company.com</small>
+      </div>
+      <div class="field field-wide">
+        <label for="cf-message" class="de-only">Nachricht</label>
+        <label for="cf-message" class="en-only">Message</label>
+        <textarea id="cf-message" name="message" minlength="10" placeholder="Ihre Nachricht..." required></textarea>
+        <small class="muted de-only">Mindestens 10 Zeichen</small>
+        <small class="muted en-only">At least 10 characters</small>
+      </div>
     </div>
-    <div class="field">
-      <label for="cf-email" class="de-only">E-Mail</label>
-      <label for="cf-email" class="en-only">E-mail</label>
-      <input id="cf-email" name="email" type="email" inputmode="email" autocomplete="email" required>
+
+    <div class="checklab">
+      <input id="cf-consent" class="check" name="consent" type="checkbox" required>
+      <label for="cf-consent" class="de-only">Ich stimme zu.</label>
+      <label for="cf-consent" class="en-only">I agree.</label>
     </div>
-    <div class="field">
-      <label for="cf-message" class="de-only">Nachricht</label>
-      <label for="cf-message" class="en-only">Message</label>
-      <textarea id="cf-message" name="message" minlength="10" required></textarea>
-    </div>
-    <input id="cf-website" type="text" name="_gotcha" class="hp" tabindex="-1" autocomplete="off">
-    <label class="checklab"><input id="cf-consent" class="check" type="checkbox" name="consent" required><span class="de-only">Ich stimme der Verarbeitung meiner Angaben zur Kontaktaufnahme zu.</span><span class="en-only">I consent to processing my data for contacting me.</span></label>
+
     <div class="actions">
-      <button type="submit" class="btn" id="send-btn">Senden</button>
-      <button type="reset" class="btn ghost" id="cf-reset">Reset</button>
+      <button id="send-btn" class="btn" type="submit">Senden</button>
+      <button class="btn ghost" type="reset">Reset</button>
     </div>
-    <p id="cf-status" class="status" aria-live="polite"></p>
+
+    <input class="hp" type="text" name="_gotcha" tabindex="-1" autocomplete="off">
   </form>
 
   <div class="email-row">
-    <div class="email-wrap">
+    <span class="de-only">E-Mail:</span><span class="en-only">Email:</span>
+    <span class="email-wrap">
       <a id="mailto-link" href="mailto:mr.vetaleg@gmail.com">mr.vetaleg@gmail.com</a>
-      <button id="copy-email" class="btn ghost small" type="button">Kopieren</button>
-      <span class="tooltip" role="status" aria-live="polite">Kopiert</span>
-    </div>
+      <button id="copy-email" class="btn small ghost" type="button">Kopieren</button>
+      <span class="tooltip de-only">Kopiert</span>
+      <span class="tooltip en-only">Copied</span>
+    </span>
   </div>
-
-  <p class="place"><span class="de-only">Standort:</span><span class="en-only">Location:</span> Mastershausen – Koblenz, DE</p>
 
   <p class="tiny">© <span id="year"></span> · <span class="de-only">Alle Rechte vorbehalten.</span><span class="en-only">All rights reserved.</span></p>
-
-  <div class="qr-box">
-    <p class="de-only">📱 Scanne den QR-Code für schnellen Zugriff:</p>
-    <p class="en-only">📱 Scan the QR code for quick access:</p>
-    <img id="qr-img" src="" alt="QR" width="160" height="160" loading="lazy">
-  </div>
 </footer>
 
 <div id="pdfModal" class="modal" aria-hidden="true">
   <div class="modal-content" role="dialog" aria-modal="true" aria-label="Preview">
-    <div id="pdfStatus" class="modal-status"></div>
-    <button class="close" type="button" aria-label="Close" title="Close">×</button>
+    <button class="close" type="button" aria-label="Close" title="Close">&times;</button>
     <iframe id="pdfFrame" src="" title="Dokument" loading="lazy"></iframe>
   </div>
 </div>
