--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=3">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=3">
   <link rel="manifest" href="manifest.json">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -98,7 +97,93 @@
     <h2 class="en-only">Documents</h2>
 
     <div class="cards">
-      <!-- документы как у тебя -->
+      <article class="card de-only">
+        <h3>Anschreiben (DE)</h3>
+        <p>Anschreiben für ein Pflichtpraktikum im IT-Bereich.</p>
+        <div class="card-actions doc-actions">
+          <button class="btn" type="button" data-download="docs/Anschreiben_DE.pdf" data-filename="Anschreiben_DE.pdf" data-stats-key="Anschreiben_DE">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Anschreiben_DE.pdf" data-stats-key="Anschreiben_DE_view">Ansehen</button>
+        </div>
+      </article>
+
+      <article class="card en-only">
+        <h3>Cover Letter (EN)</h3>
+        <p>Cover letter for an internship in software development.</p>
+        <div class="card-actions doc-actions">
+          <button class="btn" type="button" data-download="docs/CoverLetter_EN.pdf" data-filename="CoverLetter_EN.pdf" data-stats-key="CoverLetter_EN">Download</button>
+          <button class="btn ghost" type="button" data-view="docs/CoverLetter_EN.pdf" data-stats-key="CoverLetter_EN_view">View</button>
+        </div>
+      </article>
+
+      <article class="card de-only">
+        <h3>Lebenslauf (DE)</h3>
+        <p>Aktueller Lebenslauf.</p>
+        <div class="card-actions doc-actions">
+          <button class="btn" type="button" data-download="docs/Lebenslauf_DE.pdf" data-filename="Lebenslauf_DE.pdf" data-stats-key="Lebenslauf_DE">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Lebenslauf_DE.pdf" data-stats-key="Lebenslauf_DE_view">Ansehen</button>
+        </div>
+      </article>
+
+      <article class="card en-only">
+        <h3>CV (EN)</h3>
+        <p>Current résumé in English.</p>
+        <div class="card-actions doc-actions">
+          <button class="btn" type="button" data-download="docs/CV_EN.pdf" data-filename="CV_EN.pdf" data-stats-key="CV_EN">Download</button>
+          <button class="btn ghost" type="button" data-view="docs/CV_EN.pdf" data-stats-key="CV_EN_view">View</button>
+        </div>
+      </article>
+
+      <article class="card de-only">
+        <h3>Zeugnisse & Zertifikate</h3>
+        <p>Nachweise über Abschlüsse, Weiterbildungen und relevante Zertifikate.</p>
+        <div class="card-actions">
+          <button class="btn" type="button" data-download="docs/Zeugnisse.pdf" data-filename="Zeugnisse.pdf" data-stats-key="Zeugnisse">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Zeugnisse.pdf" data-stats-key="Zeugnisse_view">Ansehen</button>
+        </div>
+      </article>
+
+      <article class="card en-only">
+        <h3>Certificates</h3>
+        <p>Proof of degrees, trainings and relevant certificates.</p>
+        <div class="card-actions">
+          <button class="btn" type="button" data-download="docs/Certificates.pdf" data-filename="Certificates.pdf" data-stats-key="Certificates">Download</button>
+          <button class="btn ghost" type="button" data-view="docs/Certificates.pdf" data-stats-key="Certificates_view">View</button>
+        </div>
+      </article>
+
+      <article class="card de-only">
+        <h3>Zeugnis (GFN GmbH)</h3>
+        <p>Zeugnis meiner Umschulung zum Fachinformatiker für Anwendungsentwicklung.</p>
+        <div class="card-actions">
+          <button class="btn" type="button" data-download="docs/Zeugnis_GFN.pdf" data-filename="Zeugnis_GFN.pdf" data-stats-key="Zeugnis_GFN">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Zeugnis_GFN.pdf" data-stats-key="Zeugnis_GFN_view">Ansehen</button>
+        </div>
+      </article>
+
+      <article class="card en-only">
+        <h3>Certificate (GFN GmbH)</h3>
+        <p>Certificate of my retraining as an IT specialist in application development.</p>
+        <div class="card-actions">
+          <button class="btn" type="button" data-download="docs/Certificate_GFN.pdf" data-filename="Certificate_GFN.pdf" data-stats-key="Certificate_GFN">Download</button>
+          <button class="btn ghost" type="button" data-view="docs/Certificate_GFN.pdf" data-stats-key="Certificate_GFN_view">View</button>
+        </div>
+      </article>
+
+      <article class="card de-only">
+        <h3>Alle Unterlagen (ZIP)</h3>
+        <p>Gesamtes Paket aller Dokumente.</p>
+        <div class="card-actions">
+          <button class="btn" type="button" data-download="docs/Alle_Unterlagen_DE.zip" data-filename="Alle_Unterlagen_DE.zip" data-stats-key="ZIP_DE">Herunterladen</button>
+        </div>
+      </article>
+
+      <article class="card en-only">
+        <h3>All Documents (ZIP)</h3>
+        <p>Complete package of all documents.</p>
+        <div class="card-actions">
+          <button class="btn" type="button" data-download="docs/All_Documents_EN.zip" data-filename="All_Documents_EN.zip" data-stats-key="ZIP_EN">Download</button>
+        </div>
+      </article>
     </div>
   </section>
 
@@ -123,7 +208,41 @@
   <h2 class="en-only">Contact</h2>
 
   <form id="contact-form" class="contact-form" action="https://formspree.io/f/mandzzal" method="POST">
-    <!-- форма как у тебя -->
+    <div class="form-grid">
+      <div class="field">
+        <label for="cf-name" class="de-only">Name</label>
+        <label for="cf-name" class="en-only">Name</label>
+        <input id="cf-name" name="name" type="text" inputmode="text" autocomplete="name" placeholder="Vor- und Nachname" required>
+        <small class="muted de-only">Vor- und Nachname.</small>
+        <small class="muted en-only">First and last name.</small>
+      </div>
+      <div class="field">
+        <label for="cf-email">E-Mail</label>
+        <input id="cf-email" name="_replyto" type="email" inputmode="email" autocomplete="email" placeholder="name@firma.de" required>
+        <small class="muted de-only">Beispiel: name@firma.de</small>
+        <small class="muted en-only">Example: name@company.com</small>
+      </div>
+      <div class="field field-wide">
+        <label for="cf-message" class="de-only">Nachricht</label>
+        <label for="cf-message" class="en-only">Message</label>
+        <textarea id="cf-message" name="message" minlength="10" placeholder="Ihre Nachricht..." required></textarea>
+        <small class="muted de-only">Mindestens 10 Zeichen</small>
+        <small class="muted en-only">At least 10 characters</small>
+      </div>
+    </div>
+
+    <div class="checklab">
+      <input id="cf-consent" class="check" name="consent" type="checkbox" required>
+      <label for="cf-consent" class="de-only">Ich stimme zu.</label>
+      <label for="cf-consent" class="en-only">I agree.</label>
+    </div>
+
+    <div class="actions">
+      <button id="send-btn" class="btn" type="submit">Senden</button>
+      <button class="btn ghost" type="reset">Reset</button>
+    </div>
+
+    <input class="hp" type="text" name="_gotcha" tabindex="-1" autocomplete="off">
   </form>
 
   <div class="email-row">
