update: index.html, styles.css, script.js

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="header-controls">
     <div class="lang-switch" aria-label="Language">
       <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">🇩🇪</button>
-      <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">🇬🇧</button>
+      <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">🇺🇸</button>
     </div>
     <div class="theme-switch" aria-label="Theme" data-active="auto">
       <button type="button" class="theme-seg" data-theme="auto" aria-pressed="true">A</button>
